# arti-git-hub

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  convo.txt  dev-plan.md
config/: frontend.toml
docs/: developer-guide.md  frontend-integration.md  user-guide.md
scripts/: frontend.sh  run.sh
src/: main.rs
src/api/: mod.rs
src/cli/: mod.rs
src/core/: mod.rs  object.rs  repository.rs
src/core/gix-object/: Cargo.toml
src/core/gix-odb/: Cargo.toml
src/core/gix-pack/: Cargo.toml
src/core/gix-ref/: Cargo.toml
src/core/gix-revision/: Cargo.toml
src/frontend/: api_server.rs  config.rs  forgejo_backend.rs  forgejo_ui.rs  mod.rs  server.rs
src/frontend/forgejo-ui/: package.json
src/frontend/forgejo-ui/public/assets/: licenses.txt
src/frontend/forgejo-ui/public/assets/css/: asciinema-player.41ec509e.css  asciinema-player.a57d2b3c.css  asciinema-player.a57d2b3c.css.3853a900.map  code-frequency-graph.2791d1b5.css  code-frequency-graph.55afbe7d.css  code-frequency-graph.6596d1a3.css  code-frequency-graph.6596d1a3.css.a2a7df9b.map  colorpicker.7df591d9.css  contributors-graph.064f368f.css  contributors-graph.9394e25e.css  contributors-graph.b43eef72.css  contributors-graph.b43eef72.css.f5be3782.map  forgejoswagger.css  forgejoswagger.css.06a18a2b.map  index.css  index.css.2e91369f.map  katex.d6698d28.css  katex.d6698d28.css.ffdab281.map  katex.faca27c4.css  monaco.80d59802.css  monaco.80d59802.css.ec801bb9.map  monaco.d2a7a09c.css  recent-commits-graph.0ac781fa.css  recent-commits-graph.0ac781fa.css.f3b14496.map  recent-commits-graph.45c55234.css  recent-commits-graph.8ea7c703.css  swagger-ui.a67b0b98.css  swagger-ui.e83e5abb.css  swagger-ui.e83e5abb.css.7638d63e.map  swagger.css  swagger.css.120013de.map  theme-forgejo-auto-deuteranopia-protanopia.css  theme-forgejo-auto-deuteranopia-protanopia.css.67a38cdc.map  theme-forgejo-auto-tritanopia.css  theme-forgejo-auto-tritanopia.css.c9fd4493.map  theme-forgejo-auto.css  theme-forgejo-auto.css.8368beb1.map  theme-forgejo-dark-deuteranopia-protanopia.css  theme-forgejo-dark-deuteranopia-protanopia.css.b8100109.map  theme-forgejo-dark-tritanopia.css  (+15 more)
src/frontend/forgejo-ui/public/assets/js/: -----.7d505245.js  -----.7d505245.js.23b5de1b.map  -----.efe550ff.js  -.129b5f48.js  -.a7ab43d9.js  -.a7ab43d9.js.effc4922.map  asciinema-player.2191df04.js  asciinema-player.2191df04.js.5a742a3e.map  asciinema-player.611f6fe9.js  citation-js-bibtex.3d2f10cd.js  citation-js-bibtex.3d2f10cd.js.079dafcd.map  citation-js-bibtex.bbb93383.js  citation-js-core-citation-js-formats-citation-js-bibtex.b0672696.js  citation-js-core-citation-js-formats-citation-js-bibtex.f2536806.js  citation-js-core-citation-js-formats-citation-js-bibtex.f2536806.js.85c6ce78.map  citation-js-formats.306c145a.js  citation-js-formats.bedecc3c.js  code-frequency-graph.7d569490.js  code-frequency-graph.7d569490.js.72486837.map  code-frequency-graph.7d6d0c57.js  colorpicker.d28ccf68.js  colorpicker.d28ccf68.js.8dbab859.map  colorpicker.f575076b.js  contributors-graph.8e11f06e.js  contributors-graph.f93f6d89.js  contributors-graph.f93f6d89.js.cb69df64.map  devtest.js  devtest.js.8b332c26.map  dropzone.aeae890d.js  dropzone.aeae890d.js.989fcc1a.map  dropzone.eba86b32.js  easymde.0c0344e8.js  easymde.b738503e.js  easymde.b738503e.js.f1d4e9e7.map  eventsource.sharedworker.js  eventsource.sharedworker.js.388e08c5.map  forgejoswagger.js  forgejoswagger.js.884d1505.map  index.js  index.js.c7051a9a.map  (+403 more)
src/frontend/forgejo-ui/public/css/: index.css
src/frontend/forgejo-ui/templates/: home_forgejo.tmpl
src/frontend/forgejo-ui/templates/base/: footer_content.tmpl  head.tmpl
src/frontend/forgejo-ui/templates/user/auth/: signin_inner.tmpl
src/frontend/forgejo-ui/web_src/js/features/: notification.js  repo-migrate.js  stopwatch.js  user-auth-webauthn.js
src/frontend/forgejo-ui/web_src/js/features/admin/: common.js
src/frontend/forgejo-ui/web_src/js/features/comp/: SearchUserBox.js
src/network/: manager.rs  mod.rs
src/network/arti-client/: Cargo.toml
src/network/arti-client/src/: address.rs  err.rs
src/network/tor-async-utils/: Cargo.toml
src/network/tor-basic-utils/src/: lib.rs
src/network/tor-cell/tests/: testvec_relaymsg.rs
src/network/tor-circmgr/src/: impls.rs  lib.rs  usage.rs
src/network/tor-circmgr/src/hspool/: pool.rs
src/network/tor-circmgr/src/path/: exitpath.rs  hspath.rs
src/network/tor-circmgr/src/timeouts/: pareto.rs
src/network/tor-dirmgr/src/: docid.rs  lib.rs  retry.rs
src/network/tor-guardmgr/src/: util.rs  vanguards.rs
src/network/tor-guardmgr/src/fallback/: set.rs
src/network/tor-hscrypto/src/: pk.rs
src/network/tor-hsservice/src/: ipt_mgr.rs  keys.rs  lib.rs  publish.rs  replay.rs
src/network/tor-hsservice/src/config/: restricted_discovery.rs
src/network/tor-keymgr/src/: test_utils.rs
src/network/tor-llcrypto/src/pk/: keymanip.rs
src/network/tor-llcrypto/src/util/: ct.rs
src/network/tor-llcrypto/tests/: misc.rs
src/network/tor-memquota/src/mtracker/: test.rs
src/network/tor-netdir/: Cargo.toml
src/network/tor-netdir/src/: lib.rs  weight.rs
src/network/tor-proto/src/channel/: circmap.rs
src/network/tor-proto/src/congestion/: sendme.rs  test_utils.rs
src/network/tor-proto/src/crypto/: cell.rs
src/network/tor-proto/src/crypto/handshake/: fast.rs  hs_ntor.rs  ntor.rs  ntor_v3.rs
src/network/tor-proto/src/tunnel/: circuit.rs  halfstream.rs
src/network/tor-proto/src/util/: skew.rs
src/network/tor-rtmock/src/: io.rs
src/storage/: manager.rs  mod.rs
src/storage/ipfs/: Cargo.toml  build.rs  lib.rs  subscription.rs
tests/e2e/: mod.rs
tests/unit/: mod.rs  test_example.rs
