[package]
name = "ipfs-storage"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
async-stream = { default-features = false, version = "0.3" }
async-trait = { default-features = false, version = "0.1" }
base64 = { default-features = false, features = ["alloc"], version = "0.13" }
ipfs-bitswap = { version = "0.1", path = "../../../deps/rust-ipfs/bitswap" }
byteorder = { default-features = false, version = "1.3" }
bytes = { default-features = false, version = "1" }
cid = { default-features = false, version = "0.5" }
trust-dns-resolver = "0.20"
either = { default-features = false, version = "1.5" }
futures = { default-features = false, version = "0.3.9", features = ["alloc", "std"] }
hash_hasher = "2.0.3"
ipfs-unixfs = { version = "0.2", path = "../../../deps/rust-ipfs/unixfs" }
libp2p = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns-tokio"], version = "0.43.0" }
multibase = { default-features = false, version = "0.9" }
multihash = { default-features = false, version = "0.11" }
prost = { default-features = false, version = "0.9" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["std"], version = "1.0" }
thiserror = { default-features = false, version = "1.0" }
tokio = { default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync"], version = "1.0" }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.6" }
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = ["std-future", "std", "futures-03"], version = "0.2" }
void = { default-features = false, version = "1.0" }
fs2 = "0.4.3"
sled = "0.34"
once_cell = "1.5.2"
[build-dependencies]
prost-build = { default-features = false, version = "0.8" }